--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WSUI.Infrastructure</RootNamespace>
     <AssemblyName>WSUI.Infrastructure</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -63,6 +63,7 @@
     <Compile Include="Models\SearchData.cs" />
     <Compile Include="Models\SearchItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionNames.cs" />
     <Compile Include="Service\Enums\TypeSearchItem.cs" />
     <Compile Include="Service\EventArgs.cs" />
     <Compile Include="Service\FileService.cs" />
