--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WSUI.Module</RootNamespace>
     <AssemblyName>WSUI.Module</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,6 +32,12 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\Toolkits\Log4Net\net40-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="MahApps.Metro, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Toolkits\MahAppMetro\MahApps.Metro.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.Prism">
       <HintPath>..\Toolkits\Prism\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
@@ -41,16 +47,60 @@
     <Reference Include="Microsoft.Practices.Unity">
       <HintPath>..\Toolkits\Prism\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\KindViewModelBase.cs" />
+    <Compile Include="Core\ViewModelBase.cs" />
+    <Compile Include="Interface\IDataView.cs" />
+    <Compile Include="Interface\IKindItem.cs" />
+    <Compile Include="Interface\IKindsView.cs" />
+    <Compile Include="Interface\IPreviewView.cs" />
+    <Compile Include="Interface\ISettingsView.cs" />
+    <Compile Include="Interface\IUIView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\AllFilesViewModel.cs" />
+    <Compile Include="ViewModel\ContactViewModel.cs" />
+    <Compile Include="ViewModel\EmailViewModel.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="View\AllFilesDataView.xaml.cs">
+      <DependentUpon>AllFilesDataView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\AllFilesSettingsView.xaml.cs">
+      <DependentUpon>AllFilesSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ContactDataView.xaml.cs">
+      <DependentUpon>ContactDataView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ContactSettingsView.xaml.cs">
+      <DependentUpon>ContactSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EmailDataView.xaml.cs">
+      <DependentUpon>EmailDataView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EmailSettingsView.xaml.cs">
+      <DependentUpon>EmailSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\KindsView.xaml.cs">
+      <DependentUpon>KindsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\PreviewView.xaml.cs">
+      <DependentUpon>PreviewView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WSModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +112,41 @@
       <Project>{0c9d56f2-fc4f-4677-a33e-e3e9e09c30c0}</Project>
       <Name>WSUI.Infrastructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Page Include="View\AllFilesDataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AllFilesSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ContactDataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ContactSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\EmailDataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\EmailSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\KindsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\PreviewView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
