--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -38,6 +38,10 @@
     <Reference Include="MahApps.Metro, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\Toolkits\MahAppMetro\MahApps.Metro.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Outlook, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\Toolkits\Interop\Outlook\Microsoft.Office.Interop.Outlook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.Prism">
       <HintPath>..\Toolkits\Prism\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
@@ -74,6 +78,7 @@
     <Compile Include="Interface\IUIView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
+    <Compile Include="Service\ContactSuggestingService.cs" />
     <Compile Include="ViewModel\AllFilesViewModel.cs" />
     <Compile Include="ViewModel\ContactViewModel.cs" />
     <Compile Include="ViewModel\EmailViewModel.cs" />
@@ -89,6 +94,9 @@
     </Compile>
     <Compile Include="View\ContactSettingsView.xaml.cs">
       <DependentUpon>ContactSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\TextboxAutoComplete.xaml.cs">
+      <DependentUpon>TextboxAutoComplete.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EmailDataView.xaml.cs">
       <DependentUpon>EmailDataView.xaml</DependentUpon>
@@ -116,6 +124,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="Service\ResourceTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\AllFilesDataView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -129,6 +141,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ContactSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Controls\TextboxAutoComplete.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
