--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -32,6 +32,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\Toolkits\Log4Net\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="MahApps.Metro, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\C#\WpfApplication5\WpfApplication5\MahApps.Metro.dll</HintPath>
@@ -59,6 +62,9 @@
     <Compile Include="Controls\ProgressManager\IProgressManager.cs" />
     <Compile Include="Controls\ProgressManager\ProgressManager.cs" />
     <Compile Include="Controls\ProgressManager\ProgressOperation.cs" />
+    <Compile Include="Controls\ProgressManager\ProgressWindow.xaml.cs">
+      <DependentUpon>ProgressWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Core\BaseDataController.cs" />
     <Compile Include="Core\BaseKindItemStrategy.cs" />
     <Compile Include="Core\BaseSearchData.cs" />
@@ -89,6 +95,12 @@
       <Project>{3e9f9f18-b9ad-4dde-a5d6-f71b75c737d2}</Project>
       <Name>WSPreview</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Controls\ProgressManager\ProgressWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
