--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -68,8 +68,15 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\EmailCommand.cs" />
+    <Compile Include="Commands\ForwardCommand.cs" />
+    <Compile Include="Commands\OpenPreviewCommad.cs" />
+    <Compile Include="Commands\ReplyCommand.cs" />
+    <Compile Include="Core\BaseCommandStrategy.cs" />
+    <Compile Include="Core\BasePreviewCommand.cs" />
     <Compile Include="Core\KindViewModelBase.cs" />
     <Compile Include="Core\ViewModelBase.cs" />
+    <Compile Include="Interface\ICommandStrategy.cs" />
     <Compile Include="Interface\IDataView.cs" />
     <Compile Include="Interface\IKindItem.cs" />
     <Compile Include="Interface\IKindsView.cs" />
@@ -78,11 +85,15 @@
     <Compile Include="Interface\IPreviewView.cs" />
     <Compile Include="Interface\ISettingsView.cs" />
     <Compile Include="Interface\IUIView.cs" />
+    <Compile Include="Interface\IWSCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
     <Compile Include="Service\DateToStringConverter.cs" />
     <Compile Include="Service\HelperConst.cs" />
     <Compile Include="Service\ContactSuggestingService.cs" />
+    <Compile Include="Strategy\CommadStrategyFactory.cs" />
+    <Compile Include="Strategy\EmailCommandStrategy.cs" />
+    <Compile Include="Strategy\FileCommandStrategy.cs" />
     <Compile Include="ViewModel\AllFilesViewModel.cs" />
     <Compile Include="ViewModel\ContactViewModel.cs" />
     <Compile Include="ViewModel\EmailViewModel.cs" />
@@ -184,6 +195,7 @@
     <Resource Include="Images\mail.png" />
     <Resource Include="Images\user.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
