--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -195,7 +195,12 @@
     <Resource Include="Images\mail.png" />
     <Resource Include="Images\user.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\fileopen.png" />
+    <Resource Include="Images\forward.png" />
+    <Resource Include="Images\reply.png" />
+    <Resource Include="Images\send.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
