--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -89,6 +89,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\GDI.cs" />
+    <Compile Include="Controls\ImageControl\PicturePreviewControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ImageControl\PicturePreviewControl.Designer.cs">
+      <DependentUpon>PicturePreviewControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ImageControl\ZoomPictureBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\Office\BaseOfficeWindow.cs" />
     <Compile Include="Controls\Office\ExcelWindow.cs" />
     <Compile Include="Controls\Office\OfficeFilePreview.cs">
@@ -160,6 +169,7 @@
     <Compile Include="PreviewHandlers\BinPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\CsvPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\FileTypeIconProvider.cs" />
+    <Compile Include="PreviewHandlers\ImagePreviewHandler.cs" />
     <Compile Include="PreviewHandlers\InternetExplorerPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\IsfPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\MsiPreviewHandler.cs" />
@@ -181,6 +191,9 @@
     <Compile Include="Service\Logger\WSSqlLogger.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ImageControl\PicturePreviewControl.resx">
+      <DependentUpon>PicturePreviewControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\Office\OfficeFilePreview.resx">
       <DependentUpon>OfficeFilePreview.cs</DependentUpon>
     </EmbeddedResource>
