--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -201,6 +201,9 @@
     <Resource Include="Images\reply.png" />
     <Resource Include="Images\send.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\attachment.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
